--- a/index.html
+++ b/index.html
@@ -153,9 +153,7 @@
                             About Us</button>
                         <h2 class="text-[24px] md:text-[40px] font-bold mb-4 mt-4 md:mb-6 md:mt-4">We design thoughtful,
                             liveable spaces</h2>
-                        <p class="text-sm md:text-base text-body font-medium">The barn house captivates with its blend
-                            of rustic charm and
-                            modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                        <p class="text-sm md:text-base text-body font-medium">Combines the rustic charm of traditional barns with the modern amenities and comforts of contemporary living.</p>
                     </div>
                     <div class="flex gap-5 md:gap-6 p-5 md:p-6 rounded-2xl bg-white lg:items-center">
                         <div>
@@ -163,8 +161,7 @@
                         </div>
                         <div class="space-y-[10px]">
                             <h4 class="text-base md:text-xl font-extrabold text-body">Commercial</h4>
-                            <p class="font-medium text-accent">The barn house captivates with its blend of rustic charm
-                                and modern.</p>
+                            <p class="font-medium text-accent">With modern functionality, creating a unique and inviting atmosphere for commercial spaces.</p>
                         </div>
                     </div>
                     <div class="flex gap-5 md:gap-6 p-5 md:p-6 rounded-2xl bg-white lg:items-center">
@@ -173,8 +170,7 @@
                         </div>
                         <div class="space-y-[10px]">
                             <h4 class="text-base md:text-xl font-extrabold text-body">Residential</h4>
-                            <p class="font-medium text-accent">The barn house captivates with its blend of rustic charm
-                                and modern.</p>
+                            <p class="font-medium text-accent">A cozy and rustic living experience, combining traditional elements with modern comforts.</p>
                         </div>
                     </div>
                 </div>
@@ -194,34 +190,28 @@
                     </svg>
                     How we works</button>
                 <h2 class="text-[24px] md:text-[40px] font-bold mb-4 mt-4 md:mb-6 md:mt-4">Our Works Process</h2>
-                <p class="text-sm md:text-base text-body font-medium md:w-7/12 mx-auto">The barn house captivates with
-                    its blend of rustic charm and
-                    modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                <p class="text-sm md:text-base text-body font-medium md:w-7/12 mx-auto">Our typical work process in various fields generally involves several key steps to ensure efficiency and effectiveness. </p>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 md:gap-6 mt-6 md:mt-8">
                 <div class="space-y-[10px] p-6 rounded-2xl bg-[#E7C1D3]">
                     <img src="assets/concept.png" alt="">
                     <h4 class="text-xl font-extrabold text-footer">Concept</h4>
-                    <p class="font-medium text-body">The barn house captivates with its blend of rustic charm
-                        and modern.</p>
+                    <p class="font-medium text-body">Innovative solutions through thoughtful concept to drive impactful results.</p>
                 </div>
                 <div class="space-y-[10px] p-6 rounded-2xl bg-[#EFDA6E]">
                     <img src="assets/flow-chart.png" alt="">
                     <h4 class="text-xl font-extrabold text-footer">Design Process</h4>
-                    <p class="font-medium text-body">The barn house captivates with its blend of rustic charm
-                        and modern.</p>
+                    <p class="font-medium text-body">Transforming ideas into reality through a creative design process.</p>
                 </div>
                 <div class="space-y-[10px] p-6 rounded-2xl bg-[#A4DAC3]">
                     <img src="assets/vision.png" alt="">
                     <h4 class="text-xl font-extrabold text-footer">Supervision</h4>
-                    <p class="font-medium text-body">The barn house captivates with its blend of rustic charm
-                        and modern.</p>
+                    <p class="font-medium text-body">Every detail is executed flawlessly through continuous supervision.</p>
                 </div>
                 <div class="space-y-[10px] p-6 rounded-2xl bg-[#77AAEA]">
                     <img src="assets/budget-planning.png" alt="">
                     <h4 class="text-xl font-extrabold text-footer">Budget Planning</h4>
-                    <p class="font-medium text-body">The barn house captivates with its blend of rustic charm
-                        and modern.</p>
+                    <p class="font-medium text-body">Strategic allocation of resources while saying within the financial limits.</p>
                 </div>
 
             </div>
@@ -237,9 +227,7 @@
                     </svg>
                     Explore our Latest works</button>
                 <h2 class="text-[24px] md:text-[40px] font-bold mb-4 mt-4 md:mb-6 md:mt-4">Our Latest Portfolio</h2>
-                <p class="text-sm md:text-base text-body font-medium md:w-7/12 mx-auto">The barn house captivates with
-                    its blend of rustic charm and
-                    modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                <p class="text-sm md:text-base text-body font-medium md:w-7/12 mx-auto">The goal is to create a functional and aesthetically pleasing living space that harmonizes with its natural surroundings.</p>
             </div>
             <div class="mx-auto lg:w-8/12 w-10/12 grid grid-cols-1 md:grid-cols-12 gap-4 md:gap-6">
                 <div class="flex flex-col md:flex-row md:gap-6 p-6 border rounded-2xl md:col-span-8 bg-white order-1 md:order-none">
@@ -248,8 +236,7 @@
                     </div>
                     <div>
                         <h4 class="text-xl md:text-2xl font-extrabold text-body mt-4 md:mt-0">Commercial</h4>
-                        <p class="font-medium text-accent mb-5 mt-4">The barn house captivates with its blend of rustic
-                            charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                        <p class="font-medium text-accent mb-5 mt-4">Burn house design is a versatile structure that merges the rustic charm of traditional barns with functional spaces for business purposes.</p>
                         <div>
                             <a class="text-base md:text-xl font-extrabold bg-transparent">View
                                 Details <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
@@ -275,9 +262,7 @@
                     </div>
                     <div>
                         <h4 class="text-xl md:text-2xl font-extrabold text-body mt-4 md:mt-0">Commercial</h4>
-                        <p class="font-medium text-accent mb-5 mt-4">The barn house captivates with its blend of rustic
-                            charm and
-                            modern.</p>
+                        <p class="font-medium text-accent mb-5 mt-4">With modern functionality, creating a unique atmosphere for commercial spaces.</p>
                         <div>
                             <a class="text-base md:text-xl font-extrabold bg-transparent">View
                                 Details <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
@@ -319,50 +304,42 @@
                 <div class="space-y-[10px] p-6 rounded-2xl border-2 bg-white hover:bg-primary hover:bg-opacity-20 duration-300 ease-in-out hover:shadow-2xl">
                     <i class="fa-solid fa-square-parking text-4xl px-5 py-4 rounded-full"></i>
                     <h4 class="text-xl font-extrabold text-footer">Parking Space</h4>
-                    <p class="font-medium text-body">The barn house captivates with its blend of rustic charm
-                        and modern.</p>
+                    <p class="font-medium text-body">Includes a spacious parking area that accommodates multiple vehicles.</p>
                 </div>
                 <div class="space-y-[10px] p-6 rounded-2xl border-2 bg-white hover:bg-primary hover:bg-opacity-20 duration-300 ease-in-out hover:shadow-2xl">
                     <i class="fa-solid fa-water-ladder text-4xl pl-4 pr-5 py-4 rounded-full"></i>
                     <h4 class="text-xl font-extrabold text-footer">Swimming Pool</h4>
-                    <p class="font-medium text-body">The barn house captivates with its blend of rustic charm
-                        and modern.</p>
+                    <p class="font-medium text-body">A sleek, modern swimming pool that complements the rustic aesthetic.</p>
                 </div>
                 <div class="space-y-[10px] p-6 rounded-2xl border-2 bg-white hover:bg-primary hover:bg-opacity-20 duration-300 ease-in-out hover:shadow-2xl">
                     <i class="fa-solid fa-lock text-4xl px-6 py-4 rounded-full"></i>
                     <h4 class="text-xl font-extrabold text-footer">Private Security</h4>
-                    <p class="font-medium text-body">The barn house captivates with its blend of rustic charm
-                        and modern.</p>
+                    <p class="font-medium text-body">Equipped with discreet, state-of-the-art private security systems.</p>
                 </div>
                 <div class="space-y-[10px] p-6 rounded-2xl border-2 bg-white hover:bg-primary hover:bg-opacity-20 duration-300 ease-in-out hover:shadow-2xl">
                     <i class="fa-solid fa-house-medical text-4xl px-5 py-4 rounded-full"></i>
                     <h4 class="text-xl font-extrabold text-footer">Medical Center</h4>
-                    <p class="font-medium text-body">The barn house captivates with its blend of rustic charm
-                        and modern.</p>
+                    <p class="font-medium text-body">A well-equipped medical center, providing with convenient access.</p>
                 </div>
                 <div class="space-y-[10px] p-6 rounded-2xl border-2 bg-white hover:bg-primary hover:bg-opacity-20 duration-300 ease-in-out hover:shadow-2xl">
                     <i class="fa-solid fa-book-bookmark text-4xl px-5 py-4 rounded-full"></i>
                     <h4 class="text-xl font-extrabold text-footer">Library Area</h4>
-                    <p class="font-medium text-body">The barn house captivates with its blend of rustic charm
-                        and modern.</p>
+                    <p class="font-medium text-body">Offering a quiet and comfortable space for reading and study in natural light.</p>
                 </div>
                 <div class="space-y-[10px] p-6 rounded-2xl border-2 bg-white hover:bg-primary hover:bg-opacity-20 duration-300 ease-in-out hover:shadow-2xl">
                     <i class="fa-solid fa-bed text-4xl px-5 py-4 rounded-full"></i>
                     <h4 class="text-xl font-extrabold text-footer">King Size beds</h4>
-                    <p class="font-medium text-body">The barn house captivates with its blend of rustic charm
-                        and modern.</p>
+                    <p class="font-medium text-body">Featuring a luxurious king-size bed that fits perfectly within the layout.</p>
                 </div>
                 <div class="space-y-[10px] p-6 rounded-2xl border-2 bg-white hover:bg-primary hover:bg-opacity-20 duration-300 ease-in-out hover:shadow-2xl">
                     <i class="fa-solid fa-building-columns text-4xl px-5 py-4 rounded-full"></i>
                     <h4 class="text-xl font-extrabold text-footer">Smart Homes</h4>
-                    <p class="font-medium text-body">The barn house captivates with its blend of rustic charm
-                        and modern.</p>
+                    <p class="font-medium text-body">Advanced smart home technology, including automated lighting.</p>
                 </div>
                 <div class="space-y-[10px] p-6 rounded-2xl border-2 bg-white hover:bg-primary hover:bg-opacity-20 duration-300 ease-in-out hover:shadow-2xl">
                     <i class="fa-solid fa-child-reaching text-4xl px-5 py-4 rounded-full"></i>
                     <h4 class="text-xl font-extrabold text-footer">Kid's Playland</h4>
-                    <p class="font-medium text-body">The barn house captivates with its blend of rustic charm
-                        and modern.</p>
+                    <p class="font-medium text-body">A dedicated kids' playland with safe equipment and well-designed play area.</p>
                 </div>
 
             </div>
@@ -383,11 +360,7 @@
                     <h2 class="text-[24px] md:text-[40px] font-bold mb-4 mt-4 md:mb-6 md:mt-4 w-9/12 mx-auto">Let’s Discuss Next
                         Project
                     </h2>
-                    <p class="text-sm md:text-base text-body font-medium xl:w-[45%] lg:w-3/4 mx-auto mb-8">The barn house
-                        captivates
-                        with
-                        its blend of rustic charm and
-                        modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                    <p class="text-sm md:text-base text-body font-medium xl:w-[45%] lg:w-3/4 mx-auto mb-8">The goal is to create an innovative and functional space that meets modern needs while enhancing lifestyle quality. Stay tuned as we dive into design and development.</p>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mx-auto lg:w-3/5 w-10/12">
                     <input class="rounded-[64px] md:p-5 py-[17px] px-5 w-full border" placeholder="First Name*"
